Update IDEA and Chrome